2002-05-21  Michael Koch  <konqueror@gmx.de>

	* configure.in: fixed --enable-debug

2002-05-19  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/common.py: Back off to supporting older more common
	  versions of python.

	* src/Codecs/Bach.cpp, src/Codecs/Packed.cpp, src/Codecs/XML.cpp,
	  src/Net/Stream.cpp:
	  Work around the problem that in_avail() sometimes returns < 0 on
	  some systems.

2002-05-18  Michael Koch  <konqueror@gmx.de>

	* all Makefile.am: 
	  fixes for builddir != srcdir

2002-05-17  Michael Koch  <konqueror@gmx.de>

        * atlas-config.in:
	  - dont output /usr/lib when called with --libs
	  - return real version instean of the string @ATLAS_VERSION@

2002-05-15  Michael Koch  <konqueror@gmx.de>

        * atlas-config.in: dont output /usr/include when called with --cflags

2002-05-15  Michael Koch  <konqueror@gmx.de>

	* src/Bridge.h: added documentation.

2002-05-14  Michael Koch  <konqueror@gmx.de>

	* src/Codecs: fixed encodeString

2002-05-14  Michael Koch  <konqueror@gmx.de>

	* src/Makefile.am: added Atlas.h
	* src/Objects/BaseObject.h: remove debugging code

2002-05-14  Michael Koch  <konqueror@gmx.de>

        * src/Objects/SmartPtr.h:
	  removed DEBUG code: it doesnt compiles and aloril
	  said its not needed.
	* configure.in: added --enable-debug
	  by default debugging is disabled
	* src/Atlas.h:
	  new file for gobal definitions
	  currently used for the definition of ATLAS_DEBUG
	* src/Codecs/Bach.cpp,
	  src/Bindings/Python/wrapperObject.cpp:
	  use ATLAS_DEBUG macro
	* src/Message/DecoderBase.cpp:
	  added some asserts
	  use ATLAS_DEBUG macro

2002-05-13  Michael Koch  <konqueror@gmx.de>

	* src/*, configure.in:
	  added Bach Codec officially to Atlas-C++
	
2002-05-12  Michael Koch  <konqueror@gmx.de>

	* adjusted all member variables to use the prefix m_

2002-05-12  Michael Koch  <konqueror@gmx.de>

	* src/Utititlies/*:
	  Added new utility to convert ATLAS files using another codec.
